# anyon

./: .gitignore  CLAUDE.md  Cargo.toml  DESKTOP_APP_COMPLETE.md  TAURI_QUICKSTART.md  WINDOWS_TEST_GUIDE.md  fix-dev-server.sh  ide-local-write-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  write-access-option2-plan.md
.github/workflows/: pre-release.yml  release-desktop.yml  remote-deploy-dev.yml  remote-deploy-prod.yml
.serena/: project.yml
.serena/memories/: completion_steps.md  project_overview.md  style_conventions.md  suggested_commands.md
crates/executors/: default_mcp.json
crates/remote/: README.md
crates/server/: build.rs
crates/services/: Cargo.toml
dev_assets_seed/: dev.db
docs/: architecture.md  bmm-workflow-status.yaml  code-signing-guide.md  docs.json  epics.md  getting-started.mdx  implementation-readiness.md  index.mdx  prd.md  product-brief.md  sprint-plan.md  supported-coding-agents.mdx  tauri-setup.md
docs/agents/: amp.mdx  ccr.mdx  claude-code.mdx  cursor-cli.mdx  droid.mdx  gemini-cli.mdx  github-copilot.mdx  openai-codex.mdx  opencode.mdx  qwen-code.mdx
docs/configuration-customisation/: agent-configurations.mdx  global-settings.mdx  (+1 more)
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
keys/: .gitignore  README.md  SIGNING_KEY_INFO.md  updater.key.pub
npx-cli/: README.md  package.json
scripts/: build-sidecar.sh
shared/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keychain.rs  lib.rs  main.rs  migration.rs  sidecar.rs  tray.rs
(+167 files in other folders)
